--- a/styles/common.css
+++ b/styles/common.css
@@ -10,7 +10,7 @@
     --container2ColorBright2 : #8a2265;
 
     --textColor1 : #c7278f;
-    --textColor2 : #6287ff; 
+    --textColor2 : #6287ff;
 }
 
 body {
@@ -33,8 +33,8 @@ body {
 }
 
 .subTitle {
-    display:flex; 
-    flex-wrap:nowrap;
+    display: flex; 
+    flex-wrap: nowrap;
     justify-content: space-around;
 }
 
@@ -83,3 +83,22 @@ body {
 .backButton:hover{
     background-color : rgb(138, 0, 0);
 }
+
+.startPlayingContainer {
+    text-decoration: none;
+    font-weight : 500;
+    font-size : 3em;
+    
+    color : white;
+    background-color: var(--container1ColorBright1);
+}
+
+.innerStartPlayingButton{
+    display : flex;
+    /* margin : auto; */
+    justify-content: center;
+    width : 100%;
+}
+
+
+
