--- a/styles/score.css
+++ b/styles/score.css
@@ -1,1 +1,91 @@
+#data {
+    display : flex;
 
+    height : 85vh;
+
+}
+
+#scoreData {
+    background-color : var(--container2Color);
+
+    display : grid;
+    flex-basis: 70%;
+
+    grid-template-columns: 40% 40%;
+
+    justify-content : space-around;
+    align-items : space-around;
+}
+
+#scoreData > * {
+
+    /* background-color : black; */
+
+    border : red 5px solid;
+    background-color : var(--container2ColorBright1);
+    font-size : 1.5em;
+
+    display : flex;
+
+    justify-content : center;
+    align-items : center;
+    
+    text-align : center;
+}
+
+#answerStatus {
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+#questionData {
+    display : flex;
+    flex-direction: column;
+
+    background-color : var(--container1Color);
+    
+    flex-basis: 30%;
+}
+
+#question{
+
+    font-size: 2em;
+
+    display: flex;
+    
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    
+    background-color: var(--container1ColorBright1);
+    
+}
+
+li + li {
+    margin-top: 5%;
+}
+
+#options {
+    /* line-height: 5%; */
+    padding-top : 2%;
+    padding-bottom : 2%;
+    background-color: var(--container1ColorBright1);
+    font-size: 1.5em;
+}
+
+#nextQuestionButton {
+    width : 100%;
+    height : 15vh;
+
+    font-size : 4em;
+
+    border : solid 5px;
+    color : var(--textColor2);
+    background-color : var(--backgroundColor);
+    text-decoration : underline;
+
+}
+
+#nextQuestionButton:hover {
+    color : red;
+}
